tests/parsing/illegal-token.stderr
error[E010]: found illegal token U+95F4 `间`, but expected parameter, type annotation, definition with `=` or line break
 --> ${DIRECTORY}/parsing/illegal-token.lushui:3:13
  |
3 | data System 间: 时
  |             ^^ unexpected token
  |

error: aborting due to previous error

