tests/parsing/illegal-token.lushui
;;; TEST fail check

data System 间: 时
